# sid

./: .dockerignore  .editorconfig  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  deny.toml  loadstone-concerns.md  lodestone-analysis.md  rustfmt.toml  sid.code-workspace
crates/sid/: Cargo.toml
crates/sid-containers/: Cargo.toml
crates/sid-containers/src/: lib.rs
crates/sid-core/: Cargo.toml
crates/sid-core/benches/: handle_event.rs
crates/sid-core/proptest-regressions/: keybind_profile.txt
crates/sid-core/src/: action.rs  animation.rs  app.rs  containers.rs  context.rs  db.rs  editor.rs  error.rs  event.rs  git.rs  keybind.rs  keybind_capture.rs  keybind_profile.rs  layout.rs  lib.rs  palette.rs  persister.rs  restore.rs  ssh.rs  svc.rs  sys.rs  sys_probe.rs  tab.rs  term.rs  widget.rs  workspace_discovery.rs  workspace_metadata.rs
crates/sid-core/tests/: action_registry.rs  adapters.rs  app_dispatch.rs  app_init.rs  context.rs  db_client_contract.rs  error.rs  event.rs  git_provider_contract.rs  keybind.rs  keybind_profile.rs  kill_job.rs  layout.rs  palette.rs  persister.rs  pty_provider_contract.rs  restore.rs  ssh_provider_contract.rs  sys_probe_loom.rs  sys_probe_run.rs  sys_probe_skeleton.rs  sys_provider_contract.rs  systemctl_contract.rs  tab_manager.rs  terminal_spawner_contract.rs  widget_trait.rs  workspace_discovery.rs  workspace_discovery_umbrella.rs  workspace_metadata_combined.rs  workspace_metadata_parser.rs  workspace_metadata_sniff_claude.rs  workspace_metadata_sniffers.rs  workspace_metadata_types.rs  workspace_upserter.rs
crates/sid-db/: Cargo.toml
crates/sid-db-clients/: Cargo.toml
crates/sid-db-clients/benches/: lexer.rs
crates/sid-db-clients/src/: lexer.rs  lib.rs  postgres.rs  sqlite.rs
crates/sid-db-clients/tests/: lexer.rs  lexer_proptest.rs  postgres_smoke.rs  sqlite_execute.rs  sqlite_introspect.rs  sqlite_open.rs  sqlite_query_paged.rs
crates/sid-db/src/: demo.rs  descriptor.rs  lexer.rs  lib.rs  postgres.rs  redb_browse.rs  sqlite.rs
crates/sid-db/tests/: postgres_auth.rs  postgres_cancel.rs  postgres_integration.rs  postgres_rich_types.rs  postgres_timescale.rs  redb_browse_integration.rs
crates/sid-fx/: Cargo.toml
crates/sid-fx/src/: lib.rs
crates/sid-fx/tests/: starfield.rs  supernovae.rs
crates/sid-git/: Cargo.toml
crates/sid-git/src/: lib.rs
crates/sid-git/tests/: branches.rs  checkout.rs  commit.proptest-regressions  commit.rs  diff.rs  log.rs  open.rs  open_and_metadata.rs  status.rs  summary.rs
crates/sid-job/: Cargo.toml
crates/sid-job/benches/: job_bench.rs
crates/sid-job/src/: lib.rs
crates/sid-job/tests/: job_queue.rs  loom_concurrency.rs
crates/sid-mcp/: Cargo.toml  tools.toml
crates/sid-mcp/src/: error.rs  lib.rs  manifest.rs  tools.rs
crates/sid-pty/: Cargo.toml
crates/sid-pty/src/: lib.rs  provider.rs  screen.rs
crates/sid-pty/tests/: open_and_io.rs  resize.rs  scaffolding.rs  screen_render.rs
crates/sid-secrets/: Cargo.toml
crates/sid-secrets/src/: file.rs  keyring.rs  keyring_store.rs  lib.rs  migration.rs  resolve.rs
crates/sid-secrets/tests/: plain_store.rs
crates/sid-ssh/: Cargo.toml
crates/sid-ssh/src/: auth.rs  client.rs  config.rs  known_hosts.rs  lib.rs  sftp.rs  shell.rs
crates/sid-ssh/tests/: config_parse.rs  connect.rs  live_sshd_smoke.rs  scaffolding.rs
crates/sid-store/: Cargo.toml
crates/sid-store/benches/: store_bench.rs
crates/sid-store/src/: codec.rs  composer.rs  entities.rs  error.rs  global.rs  keybind_load.rs  lib.rs  redb_impl.rs  schema.rs  scope.rs  sid_toml.rs  store.rs  workspace.rs
crates/sid-store/tests/: codec.rs  compose.rs  compose_proptest.rs  db_connection_store.rs  db_connections.rs  global.rs  keybinds.rs  open.rs  pinned_configs.rs  query_history.rs  quick_actions.rs  roundtrip.rs  secret_boundary.rs  secrets.rs  sessions.rs  settings.rs  settings_typed.rs  sid_toml.rs  snapshots.rs  ssh_hosts.rs  store.rs  themes.rs  widget_state.rs  workspace.rs  workspaces.rs
crates/sid-sysinfo/: Cargo.toml
crates/sid-sysinfo/benches/: list_listening_ports.rs  list_processes.rs
crates/sid-sysinfo/src/: default_route.rs  interfaces.rs  kill.rs  lib.rs  overview.rs  ports.rs  processes.rs
crates/sid-sysinfo/tests/: default_route.rs  interfaces.rs  kill.rs  ports.rs  processes.rs  timing.rs
crates/sid-system/: Cargo.toml
crates/sid-system/benches/: list_units.rs
crates/sid-system/src/: client.rs  env.rs  kitty.rs  lib.rs  parse.rs
crates/sid-system/tests/: client_integration.rs  kitty_spawner.rs  parse_fuzz.rs  parse_journal.rs  parse_list_units.rs  parse_status.rs
crates/sid-ui/: Cargo.toml
crates/sid-ui/src/: helpers.rs  lib.rs  theme.rs  theme_registry.rs  themes.rs
crates/sid-ui/tests/: helpers.rs  snapshots.rs  theme.rs  themes.rs
crates/sid-widgets/: Cargo.toml
crates/sid-widgets/benches/: interface_sort.rs  settings_dispatch.rs  tab_switch.rs  visible_workspaces.rs  workspace_detail_open.rs
crates/sid-widgets/src/: csv_export.rs  database.rs  lib.rs  list_cursor.rs  modal.rs  network.rs  settings.rs  split_view.rs  ssh.rs  stub.rs  system.rs  workspace_detail.rs  workspace_detail_state.rs  workspaces.rs
crates/sid-widgets/tests/: animation_view.rs  csv_export.rs  database.rs  database_end_to_end.rs  database_render.rs  database_state.rs  filter_input.rs  footer_hints.rs  interfaces_sidebar.rs  kill_modal.rs  modal.rs  network.rs  network_widget_kill.rs  network_widget_snapshot.rs  ports_table.rs  processes_table.rs  settings.rs  settings_animation.rs  settings_apply.rs  settings_render.rs  settings_undo.rs  sftp_edit_integration.rs  ssh.rs  ssh_render.rs  ssh_state.rs  stub.rs  system.rs  system_render.rs  system_state.rs  theme_picker_persist.rs  workspace_detail.rs  workspace_detail_integration.rs  workspaces.rs  workspaces_actions.rs  workspaces_branches.rs  workspaces_commit.rs  workspaces_diff.rs  workspaces_log.rs  workspaces_render.rs  workspaces_status.rs  (+1 more)
crates/sid/benches/: draw_bench.rs
crates/sid/examples/: db_widgets_spike.rs
crates/sid/src/: app.rs  db_registry.rs  keymap.rs  (+8 more)
(+313 files in other folders)
