[workspace]
resolver = "3"
members = [
    "crates/sid",
    "crates/sid-secrets",
    "crates/sid-store",
    "crates/sid-core",
    "crates/sid-term",
    "crates/sid-ssh",
    "crates/sid-db",
    "crates/sid-sysinfo",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
authors = ["Murphy Malcolm"]
repository = "https://github.com/murphlmao/sid"

[workspace.dependencies]
# Internal crates (versionless path deps; never published).
sid-core = { path = "crates/sid-core" }
sid-term = { path = "crates/sid-term" }
sid-ssh = { path = "crates/sid-ssh" }
sid-store = { path = "crates/sid-store" }
sid-sysinfo = { path = "crates/sid-sysinfo" }

# SSH — russh 0.61 (keys live in `russh::keys`; the standalone russh-keys crate
# is obsolete and was dropped). Pinned >=0.61 to clear RUSTSEC-2026-0153/0154
# (CryptoVec allocation hardening). russh-sftp is version-independent of russh.
russh = "0.61"
russh-sftp = "2.3"

# Terminal emulation — vt100 0.16 parses the SSH shell byte stream into a
# styled cell grid that the GPUI terminal view (Plan 3C) renders 1:1.
vt100 = "0.16"

# Database clients (Track DA, `sid-db`) — tokio-postgres = "0.7", the standard
# async Postgres driver; rusqlite = { features = ["bundled", "column_decltype"] },
# embedded SQLite that ships its own C source (no system SQLite install needed),
# with column_decltype exposing declared column types for the type mapping.
tokio-postgres = "0.7"
rusqlite = { version = "0.40", features = ["bundled", "column_decltype"] }

# DU-TLS: Postgres TLS, pure-Rust rustls stack (verified against tokio-postgres
# 0.7 by resolving a scratch lockfile: tokio-postgres 0.7.18 + rustls 0.23.41 +
# tokio-postgres-rustls 0.14.0 + rustls-native-certs 0.8.4 all resolve together
# with no conflicts). `ring` chosen over the default `aws_lc_rs` provider to
# avoid a cmake/nasm build dependency; rustls needs one crypto provider
# installed process-wide (installed once, idempotently, at connect time).
tokio-postgres-rustls = { version = "0.14", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-native-certs = "0.8"

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Network tab (`sid-sysinfo`) — process/interface/socket enumeration + signal delivery.
# Pinned to match the versions validated in the `sid-poc` salvage source.
sysinfo = { version = "0.39", default-features = false, features = ["system", "network", "disk", "user"] }
netstat2 = "0.11"
nix = { version = "0.29", features = ["signal", "process"] }

# Errors / serialization shared by the adapter seam
thiserror = "2"
serde = { version = "1", features = ["derive"] }

# Test
tempfile = "3"
