[workspace]
resolver = "3"
members = [
    "crates/sid",
    "crates/sid-secrets",
    "crates/sid-store",
    "crates/sid-core",
    "crates/sid-term",
    "crates/sid-ssh",
    "crates/sid-db",
    "crates/sid-git",
    "crates/sid-sysinfo",
    "crates/sid-svcctl",
    "crates/sid-containers",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
authors = ["Murphy Malcolm"]
repository = "https://github.com/murphlmao/sid"

[workspace.dependencies]
# Internal crates (versionless path deps; never published).
sid-core = { path = "crates/sid-core" }
sid-term = { path = "crates/sid-term" }
sid-ssh = { path = "crates/sid-ssh" }
sid-store = { path = "crates/sid-store" }
sid-git = { path = "crates/sid-git" }
sid-sysinfo = { path = "crates/sid-sysinfo" }
sid-containers = { path = "crates/sid-containers" }

# SSH — russh 0.61 (keys live in `russh::keys`; the standalone russh-keys crate
# is obsolete and was dropped). Pinned >=0.61 to clear RUSTSEC-2026-0153/0154
# (CryptoVec allocation hardening). russh-sftp is version-independent of russh.
russh = "0.61"
russh-sftp = "2.3"

# Terminal emulation — vt100 0.16 parses the SSH shell byte stream into a
# styled cell grid that the GPUI terminal view (Plan 3C) renders 1:1.
vt100 = "0.16"

# Database clients (Track DA, `sid-db`) — tokio-postgres = "0.7", the standard
# async Postgres driver; rusqlite = { features = ["bundled", "column_decltype"] },
# embedded SQLite that ships its own C source (no system SQLite install needed),
# with column_decltype exposing declared column types for the type mapping.
tokio-postgres = "0.7"
rusqlite = { version = "0.40", features = ["bundled", "column_decltype"] }

# DU-TLS: Postgres TLS, pure-Rust rustls stack (verified against tokio-postgres
# 0.7 by resolving a scratch lockfile: tokio-postgres 0.7.18 + rustls 0.23.41 +
# tokio-postgres-rustls 0.14.0 + rustls-native-certs 0.8.4 all resolve together
# with no conflicts). `ring` chosen over the default `aws_lc_rs` provider to
# avoid a cmake/nasm build dependency; rustls needs one crypto provider
# installed process-wide (installed once, idempotently, at connect time).
tokio-postgres-rustls = { version = "0.14", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-native-certs = "0.8"

# Typed Postgres value decoding (`sid-db`'s `render_pg_value`, integration-probe
# fix — see docs/design bug log): tokio-postgres's `with-*` features (enabled on
# the `tokio-postgres` dependency in `crates/sid-db/Cargo.toml`) decode UUID/
# timestamp/JSON columns through these crates instead of falling through to a
# `String` decode that silently renders a present value as "NULL". `rust_decimal`'s
# `db-tokio-postgres` feature is the NUMERIC decode path (matched against our
# pinned tokio-postgres "0.7" line above).
uuid = "1"
chrono = "0.4"
serde_json = "1"
rust_decimal = { version = "1", features = ["db-tokio-postgres"] }

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Network tab (`sid-sysinfo`) — process/interface/socket enumeration + signal delivery.
# Pinned to match the versions validated in the `sid-poc` salvage source.
sysinfo = { version = "0.39", default-features = false, features = ["system", "network", "disk", "user"] }
netstat2 = "0.11"
nix = { version = "0.29", features = ["signal", "process"] }

# Errors / serialization shared by the adapter seam
thiserror = "2"
serde = { version = "1", features = ["derive"] }

# `sid-secrets`' dependency-less encrypted-file vault backend (a peer to the OS
# keyring): argon2id KDF + XChaCha20-Poly1305 AEAD + `Zeroizing` to wipe the derived
# key on drop. All pure-Rust RustCrypto crates — no system library dependency, which is
# the whole point of this backend. `argon2` is pinned to the exact 0.6.0-rc.8 already
# resolved transitively via `ssh-key` (russh's key-parsing dep), so this adds no new
# major version to the lock; `getrandom` likewise reuses the already-resolved 0.3.x line
# (transitive from several crates) for salt/nonce generation rather than pulling in a
# full `rand` dependency.
argon2 = { version = "0.6.0-rc.8", default-features = false, features = ["alloc"] }
chacha20poly1305 = "0.11"
getrandom = "0.3"
zeroize = "1"

# Test
tempfile = "3"
proptest = "1"
