[package]
name = "sid-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
walkdir.workspace = true
crossterm.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
