[package]
name = "sid-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
walkdir.workspace = true
crossterm.workspace = true
# Tokio is allowed in sid-core ONLY for the App event loop, JobQueue handoff,
# and SysProbe — same carve-out as for crossterm. Widgets and adapters must
# never depend on tokio directly.
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"] }

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros", "rt", "test-util"] }
loom = { workspace = true }

[features]
# Enables `loom` model-check tests. Run with:
#   RUSTFLAGS='--cfg loom' cargo test -p sid-core --test sys_probe_loom --release
loom = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
