[package]
name = "sid-job"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sid-core.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros"] }
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
loom.workspace = true
criterion.workspace = true
futures.workspace = true

[[bench]]
name = "job_bench"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(loom)"] }
