[package]
name = "sid-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# MCP SDK + JSON schema generation.
rmcp.workspace = true
schemars.workspace = true

# Async runtime + IO.
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "fs", "process"] }
async-trait.workspace = true

# Serialization for tool inputs/outputs.
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true

# Errors / tracing.
thiserror.workspace = true
tracing.workspace = true

# Filesystem walking for find_pub_item / pub_items_without_doc_tests.
walkdir.workspace = true

# Subprocess execution for coverage_summary, recent_commits, criterion_compare.
# Stays in dev only as a hard dep; we shell out with tokio::process for now.

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "fs", "test-util"] }
