[package]
name = "sid-pty"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
sid-core.workspace = true
portable-pty.workspace = true
vt100.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
insta.workspace = true
loom.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[features]
default = []
loom-tests = []
