[package]
name = "sid-secrets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sid-core.workspace = true
sid-store.workspace = true
tracing.workspace = true
keyring.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true

[features]
# Opt-in round-trip test against the REAL OS keyring daemon. Off by default
# because CI/headless boxes have no Secret Service / Keychain available. Run
# locally where a daemon exists:
#   cargo test -p sid-secrets --features os-keyring-smoke
# Feature-gated (never #[ignore]) per CLAUDE.md: an ignored test is invisible decay.
os-keyring-smoke = []
