[package]
name = "sid-secrets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
sid-core.workspace = true
sid-store.workspace = true
tracing.workspace = true
keyring-core.workspace = true

# Platform backend store crates — registered at runtime by
# install_default_backend(). zbus on Linux avoids a libdbus C dependency.
[target.'cfg(target_os = "linux")'.dependencies]
zbus-secret-service-keyring-store.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
apple-native-keyring-store.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true

[features]
# Opt-in round-trip test against the REAL OS keyring daemon. Because CI runs
# --all-features, the test itself probes for a daemon and warns-and-returns
# when none is reachable (missing infrastructure, not a bug); it asserts hard
# when SID_OS_KEYRING_SMOKE=1 is set. Run strictly where a daemon exists:
#   SID_OS_KEYRING_SMOKE=1 cargo test -p sid-secrets --features os-keyring-smoke
# Feature-gated (never #[ignore]) per CLAUDE.md: an ignored test is invisible decay.
os-keyring-smoke = []
