[package]
name = "sid-ssh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sid-core.workspace = true
russh.workspace = true
russh-sftp.workspace = true
russh-keys.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
insta.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
