[package]
name = "sid-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
sid-core.workspace = true
redb.workspace = true
serde.workspace = true
postcard.workspace = true
thiserror.workspace = true
tracing.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
criterion.workspace = true
insta.workspace = true
serde_json.workspace = true
shell-words.workspace = true

[[bench]]
name = "store_bench"
harness = false
