[package]
name = "sid-store"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
redb = "4.1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
