[package]
name = "sid-sysinfo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sid-core.workspace = true
sysinfo.workspace = true
netstat2.workspace = true
nix.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
insta.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
