[package]
name = "sid-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
sid-core.workspace = true
ratatui.workspace = true
serde = { workspace = true }

[dev-dependencies]
proptest.workspace = true
insta.workspace = true
serde_json.workspace = true
