[package]
name = "sid-widgets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sid-core.workspace = true
sid-ui.workspace = true
sid-store.workspace = true
sid-job.workspace = true
sid-db-clients.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true
shell-words.workspace = true
csv.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
insta.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
criterion = { workspace = true }
# Used only by `tests/ssh_render.rs` to construct `Vt100Screen` (an impl
# of `sid-core::adapters::pty::TerminalScreen`). Production code in
# `sid-widgets` never names `sid-pty` — the binary wires concrete impls.
sid-pty.workspace = true

[[bench]]
name = "tab_switch"
harness = false
