[package]
name = "sid"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# App-shell spike. gpui is published on crates.io since Oct 2025; 0.2.x is
# self-contained (no `gpui_platform` split — that lives only on git `main`) and
# uses the monolithic `Application::new().run(...)` entry point. Pre-1.0: expect
# breaking changes between 0.2.x and later. Linux default features pull in
# font-kit + wayland + x11 automatically.
gpui = "0.2"
sid-store = { path = "../sid-store" }
sid-secrets = { path = "../sid-secrets" }
# W2 (Database tab, Plan Wave 2): the one crate allowed to name `sid-db`'s concrete
# `DbClient`/`DbClientDescriptor` impls — see `crates/sid/src/db_registry.rs`.
sid-db = { path = "../sid-db" }
# Network tab (inc-1): the one crate allowed to name `sid-sysinfo`'s concrete
# `SysinfoProvider` constructor — see `crates/sid/src/ui/network_tab.rs`. `sysinfo`/
# `netstat2`/`nix` themselves stay behind `sid_core::sys`, never named here.
sid-sysinfo.workspace = true
# Network tab v2 (Services sub-view): the one crate allowed to name `sid-svcctl`'s
# concrete `SvcctlProvider::new()` constructor — same seam shape as `sid-sysinfo`
# above. `systemctl`/subprocess calls themselves stay behind `sid_core::svc`, never
# named here. Not in `[workspace.dependencies]` (a plain path dep, like `sid-store`/
# `sid-db`/`sid-secrets` below already are) — see the root `Cargo.toml`'s `members`.
sid-svcctl = { path = "../sid-svcctl" }
# Adapter crates for Plan 3C (SSH terminal view + connect flow). `crates/sid` only ever
# names the `sid_core` trait seam (`SshClient`/`SshShell`/`TerminalScreen`) plus the two
# concrete-adapter *constructors* (`RusshClientFactory`, `Vt100Screen`) — never `russh`/
# `vt100` themselves.
sid-core.workspace = true
sid-ssh.workspace = true
sid-term.workspace = true
# Grapheme/word segmentation for the TextInput element (cursor movement, masking).
# Already in the tree transitively via gpui; pinned here as a direct dep.
unicode-segmentation = "1"
# Dedicated runtime for the SSH connect/shell actor task (Plan 3C C2): the concrete
# `RusshClient`/`RusshShell` impls assume an ambient Tokio runtime (`tokio::spawn`,
# `tokio::sync::Mutex`) — gpui's own executor is smol-based and provides none. All
# `sid_core::ssh` calls run on this runtime; gpui's executors only bridge status/output
# back to the entity via channels.
tokio.workspace = true
# Widget library for the Database tab (Plan Wave 2, W1): SQL editor (tree-sitter
# highlighting) + results table. GPUI-0.2.2-compatible; validated against dbflux/pgui
# precedent. `crates/sid` names it directly (the rendering surface) — DB drivers
# themselves stay behind `sid_db`/`sid_core::db`, never named here.
gpui-component = { version = "0.5.1", features = ["tree-sitter-languages"] }
# Bundled icon/font assets `gpui-component`'s widgets reference (sort-chevron icons on
# `Table` columns, etc.) — wired in via `Application::new().with_assets(..)`.
gpui-component-assets = "0.5.1"
